spade-tests/src/snapshots/spade_tests__typeinference__backward_tuple_indexing_with_type_error_errors_nicely.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Attempt to use tuple indexing on non-tuple
  ┌─ testinput:2:5
  │
2 │     x#0
  │     ^ expected tuple
  │
  = Expected: tuple
  =      Got: &mut (bool, bool)


